// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification types renders for FOCUS_STEP 1`] = `
<View
  alignItems="center"
  justifyContent="center"
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "paddingHorizontal": 40,
    }
  }
  value={1}
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <MyText
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 32,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Notifications are off
  </MyText>
  <MyText
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </MyText>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "#52C5DC",
          },
        ]
      }
      text="GO TO SETTINGS"
      type="primary"
    />
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
          },
        ]
      }
      text="NOT NOW"
    />
  </View>
</View>
`;

exports[`notification types renders for JOIN_CHALLENGE 1`] = `
<View
  alignItems="center"
  justifyContent="center"
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "paddingHorizontal": 40,
    }
  }
  value={1}
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <MyText
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 32,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Notifications are off
  </MyText>
  <MyText
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    To receive updates about community challenges, please turn notifications on.
  </MyText>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "#52C5DC",
          },
        ]
      }
      text="GO TO SETTINGS"
      type="primary"
    />
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
          },
        ]
      }
      text="NOT NOW"
    />
  </View>
</View>
`;

exports[`notification types renders for JOIN_COMMUNITY 1`] = `
<View
  alignItems="center"
  justifyContent="center"
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "paddingHorizontal": 40,
    }
  }
  value={1}
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <MyText
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 32,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Notifications are off
  </MyText>
  <MyText
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    To receive updates from your MissionHub community, please turn notifications on.
  </MyText>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "#52C5DC",
          },
        ]
      }
      text="GO TO SETTINGS"
      type="primary"
    />
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
          },
        ]
      }
      text="NOT NOW"
    />
  </View>
</View>
`;

exports[`notification types renders for LOGIN 1`] = `
<View
  alignItems="center"
  justifyContent="center"
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "paddingHorizontal": 40,
    }
  }
  value={1}
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <MyText
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 32,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Notifications are off
  </MyText>
  <MyText
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </MyText>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "#52C5DC",
          },
        ]
      }
      text="GO TO SETTINGS"
      type="primary"
    />
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
          },
        ]
      }
      text="NOT NOW"
    />
  </View>
</View>
`;

exports[`notification types renders for ONBOARDING 1`] = `
<View
  alignItems="center"
  justifyContent="center"
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "paddingHorizontal": 40,
    }
  }
  value={1}
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <MyText
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 32,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Notifications are off
  </MyText>
  <MyText
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </MyText>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "#52C5DC",
          },
        ]
      }
      text="GO TO SETTINGS"
      type="primary"
    />
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
          },
        ]
      }
      text="NOT NOW"
    />
  </View>
</View>
`;

exports[`notification types renders for SET_REMINDER 1`] = `
<View
  alignItems="center"
  justifyContent="center"
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "paddingHorizontal": 40,
    }
  }
  value={1}
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <MyText
    style={
      Object {
        "color": "#52C5DC",
        "fontSize": 32,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Notifications are off
  </MyText>
  <MyText
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </MyText>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "#52C5DC",
          },
        ]
      }
      text="GO TO SETTINGS"
      type="primary"
    />
    <Button
      buttonTextStyle={
        Object {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 1.5,
        }
      }
      onPress={[Function]}
      pill={true}
      style={
        Array [
          Object {
            "height": 48,
            "margin": 8,
            "width": 680,
          },
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
          },
        ]
      }
      text="I DON'T WANT REMINDERS"
    />
  </View>
</View>
`;
